--- a/ios/appTarefas/Info.plist
+++ b/ios/appTarefas/Info.plist
@@ -50,6 +50,15 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<key>UIAppFonts</key>
+<array>
+  
+ 
+  <string>Feather.ttf</string>
+  
+  <string>MaterialIcons.ttf</string>
+
+</array>
 	<false/>
 </dict>
 </plist>
